@@ -386,6 +386,14 @@ specifier|private
 specifier|static
 specifier|final
 name|String
+name|MODEL
+init|=
+literal|"model"
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|String
 name|GROUP_ID
 init|=
 literal|"groupId"
@@ -675,6 +683,17 @@ if|if
 condition|(
 operator|!
 name|PROJECT
+operator|.
+name|equals
+argument_list|(
+name|projectElement
+operator|.
+name|getNodeName
+argument_list|()
+argument_list|)
+operator|&&
+operator|!
+name|MODEL
 operator|.
 name|equals
 argument_list|(
